--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -11,6 +11,17 @@
     <%= f.input :sku %>
   </div>
 
+  <div id="details">
+    <%= f.simple_fields_for :details do |detail| %>
+    <%= render 'detail_fields', f: detail %>
+    <%end %>
+  
+    <div class="links">
+      <%= link_to_add_association 'Agregar color', f, :details %>
+    </div>
+  </div>
+
+
   <div class="form-actions">
     <%= f.button :submit %>
   </div>
