--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,39 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+
+<div class="row">
+    <div class="col-md-8 offset-2">
+        <div class="container">
+            <div class="row">
+                <% @products.each do |product| %>
+                <div class="col-md-3">
+                    <div class="card">
+                        <img class="card-img-top" src="https://dummyimage.com/600x400/c7c7c7/737373&text=image" alt="">
+                    </div>
+                    <div class="card-block">
+                        <h5 class="card-title">
+                            <%=product.name %>
+                        </h5>
+                        <div class="card-text">
+                            <div class="badge badge-primary">
+                                <%= product.categories.first.name %>
+                            </div>
+                            <div> <%= product.price %></div>
+                            <div><%= link_to 'Show', product %></div>
+
+                        </div>
+                        <div class="row float-right">
+                            <div class="col-md-12">
+                                <%#= form_for :cart, url: cart_path, method: :put do |f| %>
+                                <%#= f.hidden_field :product_id, value: product.id %>
+                                <%#= f.hidden_field :quantity, value: 1%>
+                                <%#= f.submit "Add to cart", class:"btn btn-primary btn-sm" %>
+                              <!-- <#% end %> -->
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <%end %>
+            </div>
+        </div>
+    </div>
+</div>
