--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,11 +22,11 @@
                         </div>
                         <div class="row float-right">
                             <div class="col-md-12">
-                                <%#= form_for :cart, url: cart_path, method: :put do |f| %>
-                                <%#= f.hidden_field :product_id, value: product.id %>
-                                <%#= f.hidden_field :quantity, value: 1%>
-                                <%#= f.submit "Add to cart", class:"btn btn-primary btn-sm" %>
-                              <!-- <#% end %> -->
+                                <%= form_for :cart, url: cart_path, method: :put do |f| %>
+                                <%= f.hidden_field :product_id, value: product.id %>
+                                <%= f.hidden_field :quantity, value: 1%>
+                                <%= f.submit "Add to cart", class:"btn btn-primary btn-sm" %>
+                              <% end %>
 
                             </div>
                         </div>
