--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -23,7 +23,17 @@
     <li class="nav-item">
         <%= link_to 'Registrate', new_user_registration_path, class:'nav-link' %>
     </li>
+
+    <li class="nav-item">
+        <%= link_to 'Admin', new_admin_session_path, class:'nav-link' %>
+    </li>
     <% end %>
 
-
+    <% if admin_signed_in?%>
+    <li class="nav-item">
+        <%= link_to 'Cerrar Sesion', destroy_admin_session_path, method: :delete, class:'nav-link' %>
+    </li>
+    
+    
+    <%end %>
 </nav>
