--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -7,6 +7,8 @@
   <%= f.association :categories, as: :radio_buttons%>
   </div>
 
+  <%= link_to "Crear categories", new_category_path %>
+
   </div>
   <div class="form-inputs">
     <%= f.input :name %>
